Added Akka Infrastructure to extract Wiki Users